Fix checkbox and radio border color in dark mode

--- a/static/css/checkbox.css
+++ b/static/css/checkbox.css
@@ -27,7 +27,7 @@
   height: 20px;
   width: 20px;
   border-radius: 3px;
-  border: 1px solid #DDD;
+  border: 1px solid var(--border-color);
 }
 
 /* On mouse-over tint the border */
