--- a/static/css/radio.css
+++ b/static/css/radio.css
@@ -32,7 +32,7 @@
   height: 20px;
   width: 20px;
   border-radius: 50%;
-  border: 1px solid #DDD;
+  border: 1px solid var(--border-color);
 }
 
 /* On mouse-over, tint the border */
